# wasm-ios-calc

./: .gitignore  Cargo.toml  README.md
src/: calculator.rs  calculator_buffer.rs  lib.rs  number.rs  operator.rs  truncate.rs
wasm-calculator/: Cargo.toml  README.md
wasm-calculator/ios_calculator/: Cargo.toml  README.md
wasm-calculator/ios_calculator/src/: calculator.rs  lib.rs  number.rs  operator.rs  truncate.rs
wasm-calculator/simple_calculator/: Cargo.toml
wasm-calculator/simple_calculator/src/: calculator.rs  lib.rs  number.rs  operator.rs  truncate.rs
wasm-calculator/wasm_calculator/: Cargo.toml
wasm-calculator/wasm_calculator/src/: lib.rs
wasm-ios-calc-app/: index.html  main.js  package-lock.json  package.json  style.css
wasm-ios-calculator/: Cargo.toml  README.md
wasm-ios-calculator/ios_calculator/: Cargo.toml  README.md
wasm-ios-calculator/ios_calculator/src/: calculator.rs  number.rs
wasm-ios-calculator/wasm_ios_calculator/: Cargo.toml
wasm-ios-calculator/wasm_ios_calculator/src/: lib.rs
web/: main.js  package-lock.json  package.json  symbols.js
