[package]
name = "ios_calculator"
version = "0.3.0"
edition = "2021"
description = "A simple iOS calculator implementation."
authors = ["Alex Gourlay <alexdgourlay@gmail.com>"]
repository = "https://github.com/alexdgourlay/wasm-ios-calc/tree/main/wasm-calculator/ios_calculator"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-format = "0.4.4"
